<resources>
    <string name="app_name">Lista de Exercicios 01</string>
    <string name="selecione_um_tipo">Selecione um Tipo</string>
    <string name="selecione_um_subtipo">Selecione um SubTipo</string>
    <string name="teste_de_uso_do_scroll">teste de uso do scroll</string>
    <string name="button">Button</string>
    <string name="resultado">Resultado</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="ponto">.</string>
    <string name="digite">Digite</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_4">4</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="igual">=</string>
    <string name="del">DEL</string>
    <string name="divisao">÷</string>
    <string name="x">x</string>
    <string name="subtracao">-</string>
    <string name="adicao">+</string>
    <string name="_5">5</string>
    <string name="_9">9</string>
    <string name="insira_a_url_para_abrir_o_site">Insira a URL para abrir o site:</string>
    <string name="digite_uma_url_de_um_site">Digite uma URL de um site</string>
    <string name="abrir_url">Abrir URL</string>
    <string name="prencher_com_um_exemplo">Prencher com um exemplo</string>
    <string name="tipo_contato">Tipo Contato</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="telefone">Tel</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="app">Aplicativo</string>
    <string name="enviar">Enviar</string>
    <string name="selecione_tipos_de_contato">Selecione tipos de contato</string>
    <string name="msg">Seus dados são:</string>
    <string name="iniciar_exercicio07detalhe">Iniciar Exercicio07Detalhe</string>
    <string name="voltar">Voltar</string>
    <string name="intent_detalhe">Intent Detalhe</string>
    <string name="exerc_cio_01">Exercício 01</string>
    <string name="exerc_cio_02">Exercício 02</string>
    <string name="exerc_cio_03">Exercício 03</string>
    <string name="exerc_cio_04">Exercício 04</string>
    <string name="exerc_cio_05">Exercício 05</string>
    <string name="exerc_cio_07">Exercício 07</string>
    <string name="exerc_cio_08">Exercício 08</string>
</resources>