<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exerc05">

    <EditText
        android:id="@+id/etNumerosEx"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/digite"
        android:inputType="number"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/resultado"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumerosEx" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="281dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResultado">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:background="#3C4042"
            android:backgroundTint="#3C4042">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn7Ex6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#3C4042"
                    android:text="@string/_7"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn8Ex6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#3C4042"
                    android:text="@string/_8"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn9Ex6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#3C4042"
                    android:text="@string/_9"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn4Ex6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#3C4042"
                    android:text="@string/_4"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn5Ex6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#3C4042"
                    android:text="@string/_5"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn6Ex6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#3C4042"
                    android:text="@string/_6"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn1Ex6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#3C4042"
                    android:text="@string/_1"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn2Ex6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#3C4042"
                    android:text="@string/_2"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn3Ex6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#3C4042"
                    android:text="@string/_3"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnPontoEx6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#3C4042"
                    android:text="@string/ponto"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn0Ex6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#3C4042"
                    android:text="@string/_0"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnIgualEx6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#3C4042"
                    android:text="@string/igual"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#5F6267">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnApagarEx6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#5F6267"
                    android:text="DEL"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnDividirEx6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#5F6267"
                    android:text="@string/divisao"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnMultiplicarEx6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#5F6267"
                    android:text="@string/x"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnSubtrairEx6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#5F6267"
                    android:text="@string/subtracao"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnSomarEx6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#5F6267"
                    android:text="@string/adicao"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>